<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Elfec Mobile</string>
    <string name="about">About&#8230;</string>

    <!-- WelcomeActivity -->
    <string name="welcome_to_app">Welcome to the</string>
    <string name="welcome_description">In order to enable all the functionality of the application,
        you need to pick a Gmail account</string>
    <string name="welcome_create_gmail">would you like to select one?</string>
    <string name="btn_select_account">SELECT</string>
    <string name="btn_decline_account">MAYBE LATER</string>
    <string name="opt_select_account">Add account</string>
    <string name="sign_in_failed">The user couldn\'t be authenticated, no gmail account was
        selected</string>

    <!-- Register Account -->
    <string name="register_account_title">&#160;&#160;Register account</string>
    <string name="nus_sample">E.g. 261724</string>
    <string name="account_sample">E.g. 34&#8211;453&#8211;321&#8211;65</string>
    <string name="btn_register">Register</string>
    <string name="account_img">Account</string>
    <string name="account_mask">##-###-###-##</string>
    <string name="waiting_msg">Please wait, your request is being processed&#8230;</string>
    <string name="msg_registering_account">Please wait, your account is being verified and
        registered&#8230;</string>
    <string name="account_successfully_reg">The account %1$s has been registered
        successfully!</string>
    <string name="errors_in_fields">There are errors in some fields, correct them to
        continue</string>
    <string name="account_already_reg_title">ACCOUNT ALREADY REGISTERED</string>
    <string name="account_already_reg_msg">The information you have provided is from an account
        that you have already registered</string>
    <string name="errors_on_register_title">ERROR IN ACCOUNT REGISTRATION</string>
    <string name="register_account_information">Registration information</string>
    <string name="title_register_account_information">REGISTRATION INFORMATION</string>
    <string name="btn_understanded">Got it</string>
    <string name="msg_register_account_info">In order to register an account you need the
        information provided on the Billing Notice. The billing notice looks like the picture
        bellow, where it has the NUS and account fields. Fill both values on the fields and press
        <i>\"Register\"</i>.\n If you want to unregister an account, you can do it doing a
        long press on it, in the Accounts screen.</string>
    <string name="img_collection_notice">Billing Notice</string>

    <!-- Main Menu -->
    <string name="app_title">System of Customer Services</string>
    <string name="welcome">Welcome</string>
    <string name="btn_accounts">Accounts</string>
    <string name="btn_location_services">Location services</string>
    <string name="btn_notifications">Notifications</string>
    <string name="btn_contacts">Contacts</string>
    <string name="content_switch_client">Switch user</string>
    <string name="lbl_current_client">Current user</string>
    <string name="lbl_no_active_client">No Gmail account has been selected yet</string>
    <!-- Main Menu : Switch Client -->
    <string name="switch_client_title">SWITCH USER ACCOUNT</string>
    <string name="switch_client_msg">You are about to change the current Gmail account linked with
        the application and its usage, take note that it\'s used to:\n
        ● Link your Elfec accounts with your user\n
        ● Get your registered Elfec accounts\n
        ● Get notifications about your Elfec accounts and their status</string>

    <!-- View Accounts -->
    <string name="view_accounts_title">&#160;&#160;Accounts</string>
    <string name="no_accounts_registered">You currently have no registered accounts</string>
    <string name="use_button_add">Press the button</string>
    <string name="lbl_for_register">to register</string>
    <string name="lbl_an_account">an account.\n\nGetting your Elfec accounts registered
        has many advantages like:\n
        ● Getting notifications about any event which could affect the energy supply of any of
        your accounts. That includes incidental outages (e.g. A truck crashed into a light pole),
        scheduled outages and late payment of your bills prior to the cut-off of the energy supply.\n
       ● View the status of your energy supply and your current debts.\n
       ● View your electricity usage.</string>
    <string name="lbl_loading_accounts">Loading your accounts&#8230;</string>
    <string name="lbl_account_list_item_name">Name:</string>
    <string name="errors_on_download_accounts_title">ACCOUNTS DOWNLOAD ERROR</string>
    <!-- View Accounts: Delete Account -->
    <string name="delete_account_title">DELETE ACCOUNT</string>
    <string name="delete_account_msg">Are you sure you want to delete this account?</string>
    <string name="account_successfully_deleted">Account deleted successfully!</string>
    <string name="errors_on_delete_account_title">DELETE ACCOUNT ERROR</string>
    <!-- View Accounts: Rows -->
    <string name="lbl_no_debts">No debts</string>
    <string name="lbl_currency">Bs.</string>

    <!-- Location Services -->
    <string name="location_services_title">&#160;&#160;Location services</string>
    <string name="waiting_map_msg">Please wait, connecting to google maps&#8230;</string>
    <string name="no_internet_msg">Couldn\'t connect to the server. check your internet
        connection!</string>
    <string name="errors_on_get_points_title">LOCATION SERVICES ERROR</string>
    <!-- Location Services: Markers -->
    <string name="lbl_marker_address">Address:</string>
    <string name="lbl_marker_phone">Phone:</string>
    <string name="lbl_marker_bussines_hours">Opening hours:</string>

    <!-- Contacts -->
    <string name="contacts_title">&#160;&#160;Contacts</string>
    <string name="lbl_visit_us_facebook">Visit us on facebook</string>
    <string name="title_phone_pick">PICK PHONE TO CALL</string>
    <string name="btn_dial">Dial</string>

    <!-- Notificaciones -->

    <string name="notifications_title">&#160;&#160;Notifications</string>
    <string name="outage_group">Outages &amp; information</string>
    <string name="accounts_group">Accounts</string>
    <string name="lbl_no_outage_notifications">You currently don\'t have any outage nor
        information notifications</string>
    <string name="lbl_no_account_notifications">You currently don\'t have any account
        notifications</string>
    <string name="delete_notifications_title">DELETE NOTIFICATIONS</string>
    <string name="delete_outage_notifications_msg">You are about to delete your history of
        outage &amp; information notifications, proceed?</string>
    <string name="delete_account_notifications_msg">You are about to delete your history of
        account notifications, proceed?</string>

    <!-- View Account Details -->
    <string name="view_account_details_title">&#160;&#160;Account details</string>
    <string name="lbl_account_status">Status:</string>
    <string name="lbl_total_debt">Total debt:</string>
    <string name="lbl_debt_detail">Debt details:</string>
    <string name="list_item_debt_expiration_date">Expiration date:</string>
    <string name="list_item_receipt_number_date">Receipt number:</string>
    <string name="lbl_usage">Energy usage:</string>
    <string name="title_no_location_avaible">NO LOCATION AVAILABLE</string>
    <string name="msg_no_location_avaible">Currently there isn\'t any location
        available for this supply. This can occur because the supply is new or it is in transfer
        process.</string>

    <!-- Image captions -->
    <string name="logo_elfec_caption">Elfec Logo</string>
    <string name="setup_distance">Set distance up</string>
    <string name="delete_notifications_caption">Delete notifications</string>

    <!-- Account Picker Dialog -->
    <string name="account_picker_title">SELECT AN ACCOUNT</string>

    <!-- No Gmail Account Dialog -->
    <string name="no_gmail_account_title">NO GMAIL ACCOUNT</string>
    <string name="no_gmail_account_message">In order to access this option you need to select a
        Gmail account, proceed?</string>

    <!-- Setup Distance Layout -->
    <string name="setup_distance_title">SET DISTANCE UP</string>
    <string name="lbl_meters">meters</string>
    <string name="minimun_distance">500</string>
    <string name="maximun_distance">10000</string>

    <!-- Botones Dialogos -->
    <string name="btn_ok">OK</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <!-- Samples -->
    <string name="account_deleted_sample">Cuenta eliminada</string>
    <string name="date_sample">06 Ago 2014</string>
    <string name="time_sample">19:03</string>
    <string name="notification_message_sample">Se agregó la cuenta: 231234123 con el nus: 22322</string>
    <string name="name_sample">Jarry Pedro Perez</string>
    <string name="address_sample">Av Cap. V. Ustariz 01323</string>
    <string name="account_balance_sample">1.923</string>
    <string name="decimal_balance_sample">70</string>
    <string name="gmail_sample">ssc.elfec@gmail.com</string>
    <string name="account_status_sample">Cortado por mora</string>
    <string name="month_year_sample">Diciembre 2014</string>
    <string name="simple_date_sample">06/09/2014</string>
    <string name="short_date_sample">2014/12</string>
    <string name="usage_sample">431</string>

    <!-- XListView -->
    <string name="xlistview_header_hint_normal">Refresh</string>
    <string name="xlistview_header_hint_ready">Release to refresh</string>
    <string name="xlistview_header_hint_loading">Refreshing&#8230;</string>
    <string name="xlistview_header_last_time">Refreshed at: </string>
    <string name="xlistview_footer_hint_normal">View more notifications</string>
    <string name="xlistview_footer_hint_ready">Release to load older notifications</string>

    <!-- Api Exceptions -->
    <string name="gcm_connect_exception"><![CDATA[Couldn\'t connect to the server, please check your
        internet connection.\nIf you do have internet connection, please check that you have <a
            href="https://play.google.com/store/apps/details?id=com.google.android.gms&amp;hl=es_419/"
            >Google Play Services</a> installed.]]></string>

    <string name="mobile_side_exception">An error occurred while processing the server
        data, we apologize for the inconvenience, please try again later.</string>

    <string
        name="outdated_app_exception"><![CDATA[Couldn\'t connect to the web services because this
        application\'s version is outdated. We encourage you to download the <b>latest
            version</b> from playstore: <a
            href="https://play.google.com/store/apps/details?id=com.elfec.ssc">
            Get latest version</a>.]]></string>

    <string name="server_down_exception">The server is temporally out of service or in
        maintenance. Please try again later, we apologize for the inconvenience.</string>

    <string name="server_side_exception">An error occurred in the server while processing
        your request, please try again later.</string>

    <!-- Client Id -->
    <string name="client_id">302707079727-tqj5938es0km2fn7801041uuare0lovq.apps.googleusercontent.com</string>
</resources>