<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingStart="15dp"
    android:paddingRight="15dp"
    android:paddingEnd="15dp"
    android:orientation="vertical" >

     <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content" >
	    <TextView
	        android:id="@+id/txt_current_distance"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:gravity="end"
	        android:paddingRight="25dp"
	        android:paddingEnd="25dp"
	        android:textAppearance="@style/TextAppearance.ElfecSsc.CustomFont.Title" />

	    <TextView
	        android:id="@+id/lbl_meters"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/txt_current_distance"
	        android:textColor="@color/light_text_color"
	        android:layout_toRightOf="@+id/txt_current_distance"
	        android:layout_toEndOf="@+id/txt_current_distance" 
	        android:layout_marginLeft="-23dp"
	        android:layout_marginStart="-23dp"
	        android:text="@string/lbl_meters" />

    </RelativeLayout>

    <SeekBar
        android:id="@+id/distance_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/lbl_min_distance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/minimun_distance"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <TextView
	        android:id="@+id/lbl_max_distance"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/maximun_distance"
	        android:gravity="end"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    
    

</LinearLayout>
