<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:orientation="@integer/list_item_orientation"
            android:paddingTop="10dp" >

            <LinearLayout
                android:id="@+id/layout_accounts"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/account_mini_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_default"
                    android:contentDescription="@string/account_img"
                    android:padding="4dp"
                    android:src="@drawable/account_mini" />

                <TextView
                    android:id="@+id/row_account_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/account_sample"
                    android:textAppearance="@style/TextAppearance.ElfecSsc.CustomFont.Semilight"
                    android:textColor="@color/mtrl_gray"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/row_nus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_default"
                    android:contentDescription="@string/account_img"
                    android:padding="4dp"
                    android:src="@drawable/nus_mini" />

                <TextView
                    android:id="@+id/row_nus_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/nus_sample"
                    android:textAppearance="@style/TextAppearance.ElfecSsc.CustomFont.Semilight"
                    android:textColor="@color/mtrl_gray"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end|top"
            android:background="@drawable/btn_default"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp" >

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_balance_sample"
                android:textAppearance="@style/TextAppearance.ElfecSsc.CustomFont.Light"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/layout_decimal_debt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/total_amount_decimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:includeFontPadding="false"
                    android:padding="0dp"
                    android:text="@string/decimal_balance_sample"
                    android:textAppearance="@style/TextAppearance.ElfecSsc.CustomFont.Semilight"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:includeFontPadding="false"
                    android:padding="0dp"
                    android:text="@string/lbl_currency"
                    android:textAppearance="@style/TextAppearance.ElfecSsc.CustomFont.Semilight"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:orientation="@integer/list_item_orientation" >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_default"
                android:contentDescription="@string/account_img"
                android:padding="4dp"
                android:src="@drawable/account_owner" />

            <TextView
                android:id="@+id/row_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/name_sample"
                android:textAppearance="@style/TextAppearance.ElfecSsc.CustomFont.Normal"
                android:textColor="@color/mtrl_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_default"
                android:contentDescription="@string/account_img"
                android:padding="4dp"
                android:src="@drawable/client_address" />

            <TextView
                android:id="@+id/row_address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/address_sample"
                android:textAppearance="@style/TextAppearance.ElfecSsc.CustomFont.Normal"
                android:textColor="@color/mtrl_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/static_separator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/background_soft_gray" />

</LinearLayout>